--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "StackOverflowLite is a platform where people can ask questions and provide answers.",
   "main": "app.js",
   "scripts": {
+    "devstart": "nodemon server/bin/www.js --exec babel-node",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,12 +23,14 @@
   },
   "homepage": "https://github.com/Frediflexta/StackOverflowLite#readme",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.3",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "chai-http": "^4.0.0",
     "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
@@ -44,9 +47,6 @@
     "nyc": "^11.1.0"
   },
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "chai": "^4.1.2",
