fix coverage report add babel-plugin-istanbul library and add istanbul plugin in .babelrc [Fixed #159792716]

--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,7 @@
 { 
   "presets": ["env"],
   "plugins": [
-    "transform-object-rest-spread", ["transform-runtime", {
-        "polyfill": false,
-        "regenerator": true
-    }]
-]
+    "transform-object-rest-spread",
+    "istanbul"
+    ]
 }
