--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,17 @@ env:
   global: 
     - CC_TEST_REPORTER_ID=741262fa26908fbfa7a50f1edb6b110d927352539d3cfb01b22b189025a4e273
 
+cache:
+  directories:
+    - "node_modules"
+
 before-script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 
 script:
-  - npm test 
+  - npm test
 
 after_script: 
   - npm run coverage
