--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon server/bin/www.js --exec babel-node",
-    "test": "cross-env NODE_ENV=test nyc mocha server/test/**/*.js --require babel-core/register",
+    "test": "cross-env NODE_ENV=test nyc mocha --require babel-core/register server/test/**/*.js",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
@@ -48,6 +48,8 @@
     "nyc": "^11.1.0"
   },
   "dependencies": {
+    "@istanbuljs/nyc-config-babel": "^1.2.3",
+    "babel-plugin-istanbul": "^4.1.6",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "chai": "^4.1.2",
