--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,10 @@
 { 
   "presets": ["env"],
   "plugins": [
-    "transform-object-rest-spread",
+    "transform-object-rest-spread", ["transform-runtime", {
+      "polyfill": false,
+      "regenerator": true
+    }],
     "istanbul"
-    ]
+  ]
 }
