--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
     "mocha-istanbul": "^0.3.0",
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.17.3",
-    "nyc": "^11.1.0"
+    "nyc": "^11.1.0",
+    "sinon": "^4.5.0",
+    "sinon-chai": "^3.0.0",
+    "sinon-express-mock": "^2.0.0"
   },
   "dependencies": {
     "@istanbuljs/nyc-config-babel": "^1.2.3",
