chore(setup database): integrate postgresql
setup database connection
create tables
seed tables with data

[Finishes #159988713]

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon server/bin/www.js --exec babel-node",
     "test": "cross-env NODE_ENV=test nyc mocha --require babel-core/register server/test/**/*.js --exit",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "db": "babel-node server/models/index.js"
   },
   "repository": {
     "type": "git",
