feat(login users): enable user login
enbale user login for returning user
write test to validate the route
validate some user inputs

[Finishes #159989640]

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ env:
   global: 
     - CC_TEST_REPORTER_ID=741262fa26908fbfa7a50f1edb6b110d927352539d3cfb01b22b189025a4e273
 
+service:
+  - postgresql
+
 cache:
   directories:
     - "node_modules"
