--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "chai": "^4.1.2",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "faker": "^4.1.0",
     "jsend": "^1.0.2",
     "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.0",
