--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon server/bin/www.js --exec babel-node",
-    "test": "cross-env NODE_ENV=test nyc mocha --require babel-core/register server/test/**/*.js --exit",
+    "test": "npm run db && cross-env NODE_ENV=test nyc mocha --require babel-core/register server/test/**/*.js --exit",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "db": "babel-node server/models/index.js"
+    "db": "cross-env NODE_ENV=test babel-node server/models/index.js --exit"
   },
   "repository": {
     "type": "git",
