--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ cache:
     - "node_modules"
 
 before-script:
+  - psql -c 'CREATE DATABASE stackoverflow-lite;' -U postgres
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
@@ -22,5 +23,6 @@ script:
   - npm test
 
 after_script: 
+  - psql -U postgres -d stackoverflow-lite -f server/config/tests/pulldown.sql 
   - npm run coverage
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
