feat(delete question): user should be able to delete questions
configure travis to build and report test coverage

[Finishes #159992392]

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ node_js:
 env: 
   global: 
     - CC_TEST_REPORTER_ID=741262fa26908fbfa7a50f1edb6b110d927352539d3cfb01b22b189025a4e273
+    - SECRET = travisusesecretstoworkwithmyjwtandanyotherplacethatneedsaprocessdotenvfile
 
 service:
   - postgresql
