--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ cache:
     - "node_modules"
 
 before-script:
-  - psql -c 'CREATE DATABASE stackoverflow-lite;' -U postgres
+  - psql -c 'CREATE DATABASE travis;' -U postgres
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
