chore(heroku): configure the file to deploy on heroku
change the name of the config file to march the key on heroku

[#160120906]

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,6 @@ script:
   - npm test
 
 after_script: 
-  - psql -U postgres -d stackoverflow-lite -f server/config/tests/pulldown.sql 
+  - psql -U postgres -d travis -f server/config/tests/pulldown.sql 
   - npm run coverage
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
