chore(heroku hosting): edit config file
edit config file
add script to run

[#160120906]

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon server/bin/www.js --exec babel-node",
     "test": "set NODE_ENV=test&& npm run db && cross-env NODE_ENV=test nyc mocha --require babel-core/register server/test/**/*.js --exit",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "db": "cross-env NODE_ENV=test babel-node server/models/index.js --exit"
+    "db": "cross-env NODE_ENV=test babel-node server/models/index.js --exit",
+    "migrate": "babel-node server/models/index.js"
   },
   "repository": {
     "type": "git",
