chore(feedback implementation): implement feedback you got from LFA
change response messages
reformat json response
ensure users get answers of a particular question

[#160181581]

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "db": "cross-env NODE_ENV=test babel-node server/models/index.js --exit",
     "migration": "cross-env NODE_ENV=production babel-node server/models/index.js --exit",
     "build": "babel server/ -d dist",
-    "heroku-host": "npm run build && node dist/app.js"
+    "heroku-host": "npm run build && node dist/bin/www.js"
   },
   "repository": {
     "type": "git",
