--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "test": "set NODE_ENV=test&& npm run db && cross-env NODE_ENV=test nyc mocha --require babel-core/register server/test/**/*.js --exit",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "db": "cross-env NODE_ENV=test babel-node server/models/index.js --exit",
+    "db:dev": "cross-env NODE_ENV=development babel-node server/models/index.js --exit",
     "migration": "cross-env NODE_ENV=production babel-node server/models/index.js --exit",
     "build": "babel server/ -d dist",
     "heroku-host": "npm run build && node dist/bin/www.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Frediflexta/StackOverflowLite.git"
+    "url": "https://github.com/Frediflexta/StackOverflowLite.git"
   },
   "keywords": [
     "andela",
