feat(consume sigup api): implement signup from the front-end page - add static page to express - add UI file path to express - use fetch to consume signup api - display proper message
[Finishes #160617340]

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "chai": "^4.1.2",
+    "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "faker": "^4.1.0",
